src/objects/Power_BI_link__c.object
<CustomObject>
    <fields>
        <fullName>Cuenta__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cuenta</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Power BI links</relationshipLabel>
        <relationshipName>Power_BI_links</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Link__c</fullName>
        <label>Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pais__c</fullName>
        <label>Pais</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Argentina</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Power BI link</label>
    <nameField>
        <label>Nombre de Power BI</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Power BI links</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>